# bio-benchmark-atlas

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-METADATA  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-benchmark.yml  add-evaluation.yml  broken-source.yml  config.yml  correct-metadata.yml  review-paper.yml
.github/workflows/: browser-tests.yml  check-sources.yml  deploy-pages.yml  discover-papers.yml  paper-extraction-eval.yml  paper-intake.yml  paper-owner-gate.yml  release-snapshot.yml  site-preview.yml  validate.yml
docs/: audit-playbook.md  paper-intake-operations.md
intake/: README.md
registry/: changelog.yaml  meta.yaml  taxonomies.yaml
registry/benchmark_uses/: anthropic-computational-biology-evaluation.yaml  anthropic-key-life-sciences-creation.yaml  anthropic-life-sciences-bixbench.yaml  anthropic-protein-understanding-evaluation.yaml  anthropic-scientific-figure-evaluation.yaml  (+5 more)
schema/: registry.schema.json
scripts/: build_registry.py  check_paper_owner_gate.py  check_sources.py  discover_papers.py  extract_paper.py  generate_paper_records.py  local_paper_intake.py  paper_extraction_eval.py  paper_models.py  paper_source.py  registry_io.py  run_paper_intake.py  triage_paper.py  update_source_state.py  validate_registry.py
site/: astro.config.mjs  package.json  playwright.config.ts
tests/: test_paper_automation.py  test_paper_intake.py  test_paper_owner_gate.py  test_registry.py
(+541 files in other folders)
