[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "biobench-atlas"
version = "1.3.0"
description = "A source-grounded registry of life-science benchmarks and their official evaluations."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = []
