[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "biobench-atlas"
version = "1.4.0.dev0"
description = "A source-grounded registry of life-science benchmarks and their official evaluations."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.23,<5",
  "pydantic>=2.12,<3",
  "pypdf>=6.1,<7",
  "PyYAML>=6.0,<7",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = []
